[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-sqlalchemy-model-generator"
version = "0.1.0"
description = "Generate Flask-SQLAlchemy model files from existing database schemas"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jarle", email = "apublisher@gmail.com"}
]
keywords = ["flask", "sqlalchemy", "generator", "orm", "database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
mysql = ["pymysql>=1.0.0"]
postgresql = ["psycopg2-binary>=2.9.0"]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/apublisher/generate_models"
Repository = "https://github.com/apublisher/generate_models"
Issues = "https://github.com/apublisher/generate_models/issues"

[project.scripts]
generate-models = "generate_models:cli"

[tool.setuptools]
py_modules = ["generate_models"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
